--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
     <title>ToDo Application</title>
   </head>
   <body>
-    <h1>TODO APP</h1>
+    <h1 class="header">TODO APP</h1>
     <form id="ToDoList">
       <label for="newToDoItem">
         Add A New TODO Item:
       </label><br/>
       <input type="text" id="newToDoItem" placeholder="Type in your next TODO" />
 
-      <button type="submit">ADD</button>
-    </form>
-    <p>
-     <ul  id="TODOs">
+      <button type="submit" class="addBtn">ADD</button>
+    </form><br />
 
-     </ul>
+    <p>
+     <ol id="TODOs">
+     </ol>
     </p>
     <script src="app.js"></script>
   </body>
